# python-databind

.changelog/: 4.5.1.toml  _unreleased.toml
.github/workflows/: python.yaml
databind/: pyproject.toml
databind.core/: pyproject.toml
databind.json/: pyproject.toml
databind/src/databind/core/: __init__.py  schema.py
databind/src/databind/core/tests/: schema_test.py
databind/src/databind/json/: __init__.py  converters.py
databind/src/databind/json/tests/: converters_test.py
